--- a/client1/public/index.html
+++ b/client1/public/index.html
@@ -9,12 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     /> -->
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,17 +22,13 @@
     <title>Ropa Web App</title>
   </head>
   <body>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+    This template is based on the "Flexy React Dashboard Lite" from WrapPixel.
+    The following content is used for the layout and structure of the dashboard.
+    We have customized parts of the design to fit our project needs.
+    Original template can be found at: https://www.wrappixel.com/templates/flexy-react-material-dashboard-admin
     -->
+
   </body>
 </html>
